sumo/tests/od2trips/errors/format/testsuite.od2trips
# Tests for importing the Amitran format
amitran

# Errors in VMR-files
vm

# Errors in OR-format
o
